force-app/main/default/objects/leankor__ProjectEvent__e/leankor__ProjectEvent__e.object-meta.xml
<CustomObject>
    <description>All Leankor project-level events will be published to the bus on this channel.</description>
    <label>Project Event</label>
    <pluralLabel>Project Events</pluralLabel>
</CustomObject>