force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__CustomPayload__c.field-meta.xml
<CustomField>
    <fullName>leankor__CustomPayload__c</fullName>
    <description>Stores structured or unstructured custom data provided by the event publisher.</description>
    <label>Custom Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>