force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__EventCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__EventCategory__c</fullName>
    <defaultValue>&quot;Cloning&quot;</defaultValue>
    <description>The general grouping or category of events. For example &quot;Cloning&quot; or &quot;MovingCards&quot;. No spaces.</description>
    <label>Event Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>