force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__EventName__c.field-meta.xml
<CustomField>
    <fullName>leankor__EventName__c</fullName>
    <defaultValue>&quot;EndClone&quot;</defaultValue>
    <description>The specific name or verb which describes the Leankor event. For example &quot;BeginClone&quot; or &quot;EndClone&quot;.  No spaces.</description>
    <label>Event Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>