force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__IsAPIGenerated__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsAPIGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a Leankor API caused this event to fire rather than a human performing the same action. For example, a project can be cloned from the UI and from an API call in Flow Builder.</description>
    <label>Is API Generated</label>
    <type>Checkbox</type>
</CustomField>