force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__JSONPayload__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONPayload__c</fullName>
    <description>The JSON payload which can extend the amount of contextual information provided by the event publisher.</description>
    <label>JSON Payload</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>