force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__ProjectID__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectID__c</fullName>
    <description>The Salesforce ID of the ProjectRoom__c record which was involved. For example, the newly cloned project.</description>
    <label>Project ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>