force-app/main/default/objects/leankor__ProjectEvent__e/fields/leankor__UserID__c.field-meta.xml
<CustomField>
    <fullName>leankor__UserID__c</fullName>
    <description>The Salesforce User who initiated the project event.</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>